--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit './test/**/*.spec.ts'"
   },
   "author": "",
   "license": "ISC",
+  "mocha": {
+    "require": [
+      "ts-node/register"
+    ],
+    "colors": true,
+    "timeouts": 10000
+  },
   "devDependencies": {
     "@types/chai": "^4.3.5",
     "@types/chai-as-promised": "^7.1.5",
