--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
+    "lint": "eslint --ext ts src test",
     "test": "mocha --exit './test/**/*.spec.ts'"
   },
   "author": "",
